CSS Styling fixes to placeholder height and dropped ship height to adjust for grid gap of 1px

--- a/src/components/grid/cell/Cell.module.scss
+++ b/src/components/grid/cell/Cell.module.scss
@@ -53,7 +53,7 @@
 }
 
 .showDropPlaceholder {
-  border: 2px solid forestgreen;
+  outline: 2px dashed darken(#00f, 20);
   position: absolute;
   top: 0;
   left: 0;
