--- a/src/components/ship/Ship.module.scss
+++ b/src/components/ship/Ship.module.scss
@@ -9,7 +9,7 @@
 .isPlacedOnGrid {
   position: absolute;
   top: 0;
-  outline: 1px solid #00f;
+  outline: 2px solid #00f;
   z-index: 1;
   > [class*='Cell_cell'] {
     background-color: rgba(0,0,255,.05);
